0.7/_sources/checks_gallery/tabular/model_evaluation/plot_model_info.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/model_evaluation/plot_model_info.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_model_info.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_model_evaluation_plot_model_info.py:


Model Info
**********

.. GENERATED FROM PYTHON SOURCE LINES 8-13

.. code-block:: default


    from sklearn.ensemble import AdaBoostClassifier

    from deepchecks.tabular.checks import ModelInfo








.. GENERATED FROM PYTHON SOURCE LINES 14-16

.. code-block:: default

    clf = AdaBoostClassifier(learning_rate=1.2)
    ModelInfo().run(clf)





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Model Info</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "9f2b2d5539234030aaa5bf053a420f3d": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_e011f1bbfd114784a555bf199fde79d7",
              "IPY_MODEL_90a1f508ebdc43779ab02787c66150b3",
              "IPY_MODEL_81bf4bccd2fb4eddbfad2d63cd5a93df",
              "IPY_MODEL_4252824c769f4c7f8ee1db8d6a982378"
            ],
            "layout": "IPY_MODEL_f9854cf1ae6b46e8a2b6d32314a82b8a"
          }
        },
        "e011f1bbfd114784a555bf199fde79d7": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_7ade6e07d5504d3993b3966685f139f8",
            "style": "IPY_MODEL_c891e44e7e3f49ed94c4d6687b03cd58",
            "value": "<h4><b>Model Info</b></h4>"
          }
        },
        "7ade6e07d5504d3993b3966685f139f8": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "c891e44e7e3f49ed94c4d6687b03cd58": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "90a1f508ebdc43779ab02787c66150b3": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_50e025d45d044b739b662199996880a3",
            "style": "IPY_MODEL_eee3ca64a5594ab3b486bd8f3e25a475",
            "value": "<p>Summarize given model parameters.</p>"
          }
        },
        "50e025d45d044b739b662199996880a3": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "eee3ca64a5594ab3b486bd8f3e25a475": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "81bf4bccd2fb4eddbfad2d63cd5a93df": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_505e01a45c634670aa1eca2151d3b391",
            "style": "IPY_MODEL_68aa4a69fb7a423687c32198c11298fb"
          }
        },
        "505e01a45c634670aa1eca2151d3b391": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "68aa4a69fb7a423687c32198c11298fb": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "4252824c769f4c7f8ee1db8d6a982378": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_15b18522d695425393620ab1ed1f63a4",
              "IPY_MODEL_4d5c3cee250c445db190845a2052067b",
              "IPY_MODEL_33756980c8c144e88b2163bac8595ead",
              "IPY_MODEL_c5d46aaded09488f9ee8145aedd87ace"
            ],
            "layout": "IPY_MODEL_b08ca4ef14c04a76bb5db7767bfdaae3"
          }
        },
        "15b18522d695425393620ab1ed1f63a4": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_d668543b016a4cd9badf0b465d8aa97d",
            "style": "IPY_MODEL_c82a933587934b51b871d7d9047a4fbf",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "d668543b016a4cd9badf0b465d8aa97d": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "c82a933587934b51b871d7d9047a4fbf": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "4d5c3cee250c445db190845a2052067b": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_95e6f3f91ea0469ea5e0dcc59c97f68b",
            "style": "IPY_MODEL_cdf986f185bc429a89fbdcd6fab80eef",
            "value": "<div>Model Type: AdaBoostClassifier</div>"
          }
        },
        "95e6f3f91ea0469ea5e0dcc59c97f68b": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "cdf986f185bc429a89fbdcd6fab80eef": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "33756980c8c144e88b2163bac8595ead": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_f8816db728764977a49374ecac8d737a",
            "style": "IPY_MODEL_b356704641214c0ca5e32ff90896fd18",
            "value": "<style type=\"text/css\">\n#T_ec866_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ec866_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ec866_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ec866_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ec866_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ec866_row2_col0, #T_ec866_row2_col1, #T_ec866_row2_col2 {\n  background-color: lightblue;\n}\n</style>\n<table id=\"T_ec866_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Parameter</th>\n      <th class=\"col_heading level0 col1\" >Value</th>\n      <th class=\"col_heading level0 col2\" >Default</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_ec866_row0_col0\" class=\"data row0 col0\" >algorithm</td>\n      <td id=\"T_ec866_row0_col1\" class=\"data row0 col1\" >SAMME.R</td>\n      <td id=\"T_ec866_row0_col2\" class=\"data row0 col2\" >SAMME.R</td>\n    </tr>\n    <tr>\n      <td id=\"T_ec866_row1_col0\" class=\"data row1 col0\" >base_estimator</td>\n      <td id=\"T_ec866_row1_col1\" class=\"data row1 col1\" >None</td>\n      <td id=\"T_ec866_row1_col2\" class=\"data row1 col2\" >None</td>\n    </tr>\n    <tr>\n      <td id=\"T_ec866_row2_col0\" class=\"data row2 col0\" >learning_rate</td>\n      <td id=\"T_ec866_row2_col1\" class=\"data row2 col1\" >1.20</td>\n      <td id=\"T_ec866_row2_col2\" class=\"data row2 col2\" >1.00</td>\n    </tr>\n    <tr>\n      <td id=\"T_ec866_row3_col0\" class=\"data row3 col0\" >n_estimators</td>\n      <td id=\"T_ec866_row3_col1\" class=\"data row3 col1\" >50</td>\n      <td id=\"T_ec866_row3_col2\" class=\"data row3 col2\" >50</td>\n    </tr>\n    <tr>\n      <td id=\"T_ec866_row4_col0\" class=\"data row4 col0\" >random_state</td>\n      <td id=\"T_ec866_row4_col1\" class=\"data row4 col1\" >None</td>\n      <td id=\"T_ec866_row4_col2\" class=\"data row4 col2\" >None</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "f8816db728764977a49374ecac8d737a": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "b356704641214c0ca5e32ff90896fd18": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "c5d46aaded09488f9ee8145aedd87ace": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_98bf6c7901484a62be939692ac30e440",
            "style": "IPY_MODEL_ddf52f60990d40e182eca0ef44fae83a",
            "value": "<div><p style=\"font-size:0.7em\"><i>Colored rows are parameters with non-default values</i></p></div>"
          }
        },
        "98bf6c7901484a62be939692ac30e440": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "ddf52f60990d40e182eca0ef44fae83a": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "b08ca4ef14c04a76bb5db7767bfdaae3": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "f9854cf1ae6b46e8a2b6d32314a82b8a": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "9f2b2d5539234030aaa5bf053a420f3d"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.051 seconds)


.. _sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_model_info.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_model_info.py <plot_model_info.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_model_info.ipynb <plot_model_info.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
